<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ungu"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_centerInParent="true"
        android:text="@string/t4"
        android:textColor="@color/putih"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerInParent="true"
        android:layout_marginTop="4dp"
        android:text="@string/t3"
        android:textColor="@color/putih"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:text="@string/t7"
        android:textSize="12sp"
        android:textColor="@color/putih" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/t6"
        android:textColor="@color/putih"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@id/imageView2"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:text="@string/t5"
        android:textSize="20sp"
        android:textColor="@color/putih" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/jenius2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="-5dp"
        android:text="@string/t2"
        android:textColor="@color/putih"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="-10dp"
        android:text="@string/t1"
        android:textColor="@color/putih"
        android:textSize="24dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginTop="-10dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/jenius" />

</RelativeLayout>

